--- a/styles/globals.css
+++ b/styles/globals.css
@@ -1,3 +1,15 @@
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
+
+html,
+body {
+    margin: 0;
+    height: 100%;
+    width: 100%;
+}
+
+#__next {
+    height: 100%;
+    width: 100%;
+}
